WIP svg template instructions

--- a/how-to-make-svg/svg-template.html
+++ b/how-to-make-svg/svg-template.html
@@ -57,31 +57,31 @@
                 <h3>Additional Options</h3>
                 <label><input type="checkbox" ng-model="selectedOptions.extras.option1.show"> Add Option 1</label>
                 <div ng-if="selectedOptions.extras.option1.show">
-                    <label>Sleeve Cuffs</label>
+                    <label>Option 1 Color</label>
                     <select ng-options="color as color.name for color in colors"
                         ng-model="selectedOptions.extras.option1.color"></select>
                 </div>
                 <label><input type="checkbox" ng-model="selectedOptions.extras.option2.show"> Add Option 2</label>
                 <div ng-if="selectedOptions.extras.option2.show">
-                    <label>Bottom Cuff</label>
+                    <label>Option 2 Color</label>
                     <select ng-options="color as color.name for color in colors"
                         ng-model="selectedOptions.extras.option2.color"></select>
                 </div>
                 <label><input type="checkbox" ng-model="selectedOptions.extras.option3.show"> Add Option 3</label>
                 <div ng-if="selectedOptions.extras.option3.show">
-                    <label>Pocket</label>
+                    <label>Option 3 Color</label>
                     <select ng-options="color as color.name for color in colors"
                         ng-model="selectedOptions.extras.option3.color"></select>
                 </div>
-                <label><input type="checkbox" ng-model="selectedOptions.extras.option4.show"> Add Option 5</label>
+                <label><input type="checkbox" ng-model="selectedOptions.extras.option4.show"> Add Option 4</label>
                 <div ng-if="selectedOptions.extras.option4.show">
-                    <label>Pocket</label>
+                    <label>Option 4 Color</label>
                     <select ng-options="color as color.name for color in colors"
                         ng-model="selectedOptions.extras.option4.color"></select>
                 </div>
                 <label><input type="checkbox" ng-model="selectedOptions.extras.option5.show"> Add Option 5</label>
                 <div ng-if="selectedOptions.extras.option5.show">
-                    <label>Pocket</label>
+                    <label>Option 5 Color</label>
                     <select ng-options="color as color.name for color in colors"
                         ng-model="selectedOptions.extras.option5.color"></select>
                 </div>
