--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
 <html ng-app="bumbyApp">
 
 <head>
-    <style>
-        svg .blue {
-            fill: blue;
-        }
-
-        svg .red {
-            fill: red;
-        }
-
-        svg .green {
-            fill: green;
-        }
-    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
 </head>
 <body ng-controller="mainCtrl">
-    <h1>Bumby Builder SVG Template</h1>
+    <h1>Bumby Builder</h1>
     <!-- <img src="myTracingImage.jpg" width="375" style="position:absolute;z-index: -9999;" /> -->
     <ng-view></ng-view>
     <script src="index.js"></script>
