--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html ng-app="bumbyApp">
 
 <head>
+    <link rel="stylesheet" href="resources/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
 </head>
