--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
 </head>
 <body ng-controller="mainCtrl">
-    <h1>Bumby Builder</h1>
+    <div class="banner">
+        <a href="/" class="banner-home"><img src="logo_small.jpg" alt="Bumby Wool Logo" /></a>
+    </div>
     <!-- <img src="myTracingImage.jpg" width="375" style="position:absolute;z-index: -9999;" /> -->
     <ng-view></ng-view>
     <script src="index.js"></script>
