Fix mobile size for options

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="bumbyApp">
 
 <head>
+    <meta name="viewport" content="width=device-width, maxium-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" href="resources/css/all.min.css">
     <link rel="stylesheet" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
