--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ng-view></ng-view>
     <script src="index.js"></script>
     <script src="components/cardigan/cardigan.js"></script>
+    <script src="components/pants/pants.js"></script>
     <script src="components/color-selector/colorselector.js"></script>
 </body>
 
