--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
 </head>
 <body ng-controller="mainCtrl">
-    <div class="banner">
-        <a href="/" class="banner-home"><img src="logo_small.jpg" alt="Bumby Wool Logo" /></a>
+    <div class="nav">
+        <a href="#!/" class="nav-home"><img src="resources/LOGO-5-PNG-TRANSPARENT.png" alt="Bumby Wool Logo" /></a>
+        <a ng-href="#!/" class="nav-link">All Items</a>
     </div>
     <!-- <img src="myTracingImage.jpg" width="375" style="position:absolute;z-index: -9999;" /> -->
     <ng-view></ng-view>
