Added Item page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ng-view></ng-view>
     <script src="index.js"></script>
     <script src="components/itemlist/itemlist.js"></script>
+    <script src="components/item/item.js"></script>
     <script src="components/color-selector/colorselector.js"></script>
     <script src="components/sweater/sweater.js"></script>
     <script src="components/pants/pants.js"></script>
