Using item service for option template

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <img src="myTracingImage.jpg" width="375" style="position:absolute;z-index: -9999;" /> -->
     <ng-view></ng-view>
     <script src="index.js"></script>
+    <script src="services/itemDataService.js"></script>
     <script src="components/itemlist/itemlist.js"></script>
     <script src="components/item/item.js"></script>
     <script src="components/color-selector/colorselector.js"></script>
